# Army-Chess

./: CMakeLists.txt  README.md  main.cpp
.github/: pull_request_template.md
.github/workflows/: cmake-multi-platform.yml  cmakecicd.yml
src/: main.cpp  sum.cpp  sum.hpp
src/main/: CMakeLists.txt  main.cpp
src/main/framework/: ArmyChessController.cpp  ArmyChessController.hpp
src/main/sum/: sum.cpp  sum.hpp
src/test/: CMakeLists.txt  SumTest.cpp
test/: SumTest.cpp
